[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/computer/scripts/computer.gd" type="Script" id=1]
[ext_resource path="res://entities/computer/animations/SETUP.anim" type="Animation" id=2]
[ext_resource path="res://entities/computer/animations/blink.anim" type="Animation" id=3]
[ext_resource path="res://assets/GFX/PNG/Tiles/tile_537.png" type="Texture" id=4]
[ext_resource path="res://assets/GFX/PNG/Tiles/tile_519.png" type="Texture" id=5]
[ext_resource path="res://ui/computer_screen/ComputerScreen.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.96, 32 )

[node name="Computer" type="Area2D" groups=[
"computers",
]]
collision_layer = 2
script = ExtResource( 1 )
_player_collision = [ 1, 8 ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = ExtResource( 2 )
anims/blink = ExtResource( 3 )

[node name="DetectionArea" type="CollisionShape2D" parent="."]
position = Vector2( 32, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 4 )

[node name="ScreenLight" type="Light2D" parent="."]
position = Vector2( 32, 0 )
rotation = 1.5708
scale = Vector2( 0.72, 1 )
enabled = false
texture = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerScreen" parent="CanvasLayer" instance=ExtResource( 6 )]
[connection signal="body_entered" from="." to="." method="_on_Computer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Computer_body_exited"]
